tests/fixtures/invalid/set_lt_int.py
# Cannot compare set with Int
x: bool = {1, 2} < 3
